# rs-ml

./: Cargo.toml  README.md
benches/: layer.rs
model/: mnist
src/: activation.rs  array.rs  layer.rs  lib.rs  loss.rs  main.rs  matrix.rs  model.rs
src/activation/: relu.rs  sigmoid.rs  softmax.rs
src/layer/: conv2d.rs  feed.rs  parallel.rs  reshape.rs  series.rs
src/loss/: mse.rs  xent.rs
tests/: classifier.rs  xor.rs
