[package]
name = "ml"
version = "0.1.0"
authors = ["Rowan Clarke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mnist = "0.4.1"
rand = "0.8.4"
serde = { version = "1.0.127", features = ["derive"] }
erased-serde = "0.3.16"
bincode = "1.3.3"
typetag = "0.1.7"